[package]
name = "terminal"
version = "0.1.0"
authors = ["Jim Burbridge <jhechtf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "terminal"
crate-type = ["cdylib"]

[dependencies]
termsize = "0.1.6"
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }
